--- a/kurento-rtsp2many/web/css/kurento.css
+++ b/kurento-rtsp2many/web/css/kurento.css
@@ -12,7 +12,7 @@
  * Lesser General Public License for more details.
  *
  */
-@CHARSET "UTF-8";
+@charset "UTF-8";
 
 html {
 	position: relative;
@@ -21,7 +21,6 @@ html {
 
 body {
 	padding-top: 40px;
-	body
 }
 
 video,#console {
@@ -43,7 +42,7 @@ video,#console {
 #console {
 	overflow-y: auto;
 	width: 100%;
-	height: 175px;
+	height: 350px;
 }
 
 #videoContainer {
